samples/_failures_safe/1761277275_0b7b22_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e68e0c54.c: In function ‘tokenize’:
./samples/SAFE/__tmp_e68e0c54.c:166:40: error: missing terminating ' character
  166 |         tokens[token_count].value[0] = '\0
      |                                        ^~~
./samples/SAFE/__tmp_e68e0c54.c:166:9: error: expected expression at end of input
  166 |         tokens[token_count].value[0] = '\0
      |         ^~~~~~
./samples/SAFE/__tmp_e68e0c54.c:166:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e68e0c54.c:166:9: error: expected declaration or statement at end of input
